# bpfmonitor

./: .gitignore  LICENSE  README.md  monitor_server.py  start.sh
bpf/: Makefile  cpu.bt  disk.bt  loader.c  memory.bt  monitor.bpf.c  network.bt
imgui_client/: CMakeLists.txt  build.sh  main.cpp
templates/: index.html
